# vehicle-telemetry-system

./: .README.md.swp  .gitignore  CircuitPythonMicrocontrollers.md  LICENSE.md  README-aggregation.md  README-audit.md  README-bluetooth.md  README-engine.md  README-location.md  README-motion.md  README-notebooks.md  README-rpdc.md  README-trailer.md  README-weather.md  README.md  imu_logger_LICENSE.md  imu_logger_README.md  imu_logger_pyproject.toml  imu_logger_setup.cfy  pyproject.toml  setup.cfg
CircuitPython/motion/: settings.toml  wifi_code.py
CircuitPython/trailer/: boot.py  code.py  settings.toml
circuitpython_feathers3/: code.py  settings.toml  wifi_code.py
conda/: python310-backup-20230807.yaml  python310-explicit.txt  python310.txt
docs/: DATA_ANALYSIS.md  OBD_LOG_EVALUATION.md  README-BluetoothPairing.md  polynomial_multivariate_regression.md  wifi-hotspot-router.md
imu_logger/: __init__.py  imu_logger.py  io.py  usb_devices.py
imu_logger_circuitpython_feathers3/: boot.py  settings.toml  usb_code.py  wifi_code.py
marimo-notebooks/: Gear-Study-1.py
notebooks/: Acceleration-Study-1.py  Fuel-Study-1.py  Gear-Study-0.py  Gear-Study-1.py  Gear-Study-2.py
scripts/: Gear-Study-2.py  conda-install.py
src/: ANALYSIS-jupytext.toml
src/circuitpython_feathers3/: boot.py
src/etc/: imu_logger_rc.local
src/gps_logger/: adafruit_ultimate_gps_logger.py  usb_devices.py
src/imu_logger/: __init__.py  imu_logger.py  io.py  usb_devices.py
src/obd_log_to_csv/: csv_to_delta_csv.py  obd_log_common.py  obd_log_to_csv.py
src/private/: __init__.py  example-spreadsheet.py  example-vehicles.py
src/scripts/: Gear-Study-0.py  Gear-Study-1.py  Gear-Study-3.py
src/telemetry_analysis/: __init__.py  common.py  data_files.py  example_vehicles.py  fuel.py  gears.py  mileage_spreadsheet.py  pictures.py  polynomial_multivariate_regression.py  reports.py  theta.py  vins.py  widgets.py
src/trlr_logger/: udp.py
telemetry_analysis/: __init__.py  common.py  data_files.py  fuel.py  gears.py  mileage_spreadsheet.py  pictures.py  reports.py
trailer-connector-CircuitPython/: code.py  settings.toml
