[project]
name = "vehicle-telemetry-system"
version = "0.5.0"
description = "System for collecting and processing motor vehicle data using included sensor modules."
readme = "README.md"
requires-python = ">= 3.12"
dependencies = [
  'appdirs == 1.4.4',
  'build == 1.2.2',
  'charset-normalizer == 3.3.2',
  'certifi == 2024.7.4',
  'circup >= 2.2.3',
  'click == 8.1.7',
  'Cython == 3.0.11',
  'haversine == 2.8.1',
  'ipython == 8.20.0',
  'ipywidgets == 8.1.7',
  'jupyter-ui-poll == 1.1.0',
  'marimo[recommended] >= 0.13.0',
  'Markdown == 3.7',
  'matplotlib == 3.8.4',
  'nbimporter == 0.3.4',
  'notebook == 7.3.3',
  'numpy == 1.26.4',
  'obd == 0.7.2',
  'pandas == 2.2.1',
  'pillow == 10.2.0',
  'pint == 0.20.1',
  'psutil == 6.1.0',
  'pynmeagps >= 1.0.10',
  'pyserial == 3.5',
# under Windows, may need to uncomment the following
#  'python-tzdata == 2023.3',
  'pytz == 2023.3',
  'pyubx2 >= 1.2.7',
  'pyusb == 1.2.1',
  'rich == 13.6.0',
  'scikit-learn == 1.4.2',
  'scipy == 1.12.0',
  'seaborn == 0.12.2',
  'setuptools == 68.2.2',
  'tzdata >= 2024',
  'wheel == 0.41.2',
  'widgetsnbextension == 4.0.14',
]
